internal threads switched on use of virtual threads, minimal jdk lifted up to 21